--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
 	<dimen name="flyout_menu_button_size">54dp</dimen>
 	<dimen name="flyout_menu_button_margin">16dp</dimen>
 	<dimen name="alpha_checker_size">8dp</dimen>
-	<dimen name="tool_inset">4dp</dimen>
+	<dimen name="tool_button_inset">8dp</dimen>
+	<dimen name="palette_swatch_inset">8dp</dimen>
 
 </resources>
