--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,19 +61,18 @@
 		android:id="@+id/smileyFlyoutMenu"
 		android:layout_width="@dimen/flyout_menu_button_size"
 		android:layout_height="@dimen/flyout_menu_button_size"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentEnd="true"
+		android:layout_marginTop="@dimen/flyout_menu_button_margin"
 		android:layout_marginBottom="@dimen/flyout_menu_button_margin"
 		android:layout_marginLeft="@dimen/flyout_menu_button_margin"
 		android:layout_marginRight="@dimen/flyout_menu_button_margin"
-		android:layout_marginTop="@dimen/flyout_menu_button_margin"
 		app:dialogMode="true"
 		app:itemHeight="@dimen/smiley_menu_item_size"
 		app:itemMargin="@dimen/smiley_menu_item_margin"
 		app:itemWidth="@dimen/smiley_menu_item_size"
-		app:menuAnchor="left"
+		app:menuAnchor="bottom"
 		app:selectedItemBackgroundColor="@color/smileyMenuSelectionColor"
 		app:shieldVisible="true"
-		/>
+		android:layout_alignParentTop="true"
+		android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
