--- a/flyoutmenu/src/main/res/values/attrs_flyout_menu_view.xml
+++ b/flyoutmenu/src/main/res/values/attrs_flyout_menu_view.xml
@@ -1,5 +1,6 @@
 <resources>
 	<declare-styleable name="FlyoutMenuView">
+		<attr name="buttonSize" format="dimension"/>
 		<attr name="buttonBackgroundColor" format="color"/>
 		<attr name="menuBackgroundColor" format="color"/>
 		<attr name="selectedItemBackgroundColor" format="color"/>
